lab1/Test/L1-A-13-24.output
Error Type B at Line 5
Error Type B at Line 8
Error Type A at Line 17
Error Type B at Line 20
Error Type B at Line 27
Error Type B at Line 30
Error Type A at Line 32
Error Type B at Line 35
