lab1/Test/L1-A-13-24.cmm
struct VkKUemlXUk3yyLB89 GNwhcVsXrKCw ( ) {
  struct CglnuxCjU {
    float WXHsShFEfx ;
    int Tuv_81PRbFnYBx4 ;
  }oIuxp2LFQJrjQv6Ki8 2042048651 ] = kaQb65J0 , uFzZ60rtZved 
    ;
  j || q5USGX1j78Ege > EmUpIzOi1COWjf0i7 + SiV9y7qtI6 
    / e [ y = UyTjod1F && >= xnX02R59bs3gl * d4UR4y8E 
    ( UCZQDEuC4_6xMbg , uiETAEi != ! HTT8MK4LhQlZt [ QdJXYN_Z 
    + Rc3tqtrHV7ElYUjSjMaY ( W73CDvPWpq2KCkNwO || tkeVTfdf7 
    == QF8KS8d_Cr5VhRmewz + ! ( iQPwsNA ) ) ] <= 1683075912 
    == 1928435944.43252581 < yuF93MjI83ZxyB ( ) ) . U9o3Qe9T 
    ] - - ! j4Kn9hE ;
}
int ;
struct rPGwp__l8UJZDL6_ rFnYeYqeevMI36iultL5 
\;
int ;
int ;
int eT2hLS6diXUzLvNd7GZM , FuYzjPqVoYi6sVRi 1453012695.515438320 

;
struct JO4jlXp49 ;
int ;
struct SqqYp0fc9_4O4BBHPKA ;
int EMfvwaCte ( ) {
  struct dR2dZ3lr K5EfNeAkyy52Ys_iOU - ;
  int fJbE08I6_ ;
  int U83yblzK5KZyIF ;
  struct qq8iwqQneP32Epn IDuL3utyge0 < ;
}
int a5R7uG16VJeWxjK78sUV ( int %hZL1SYXhY08frP ) {
}
struct {
  struct }Q_Cu8ZOA6 ;
struct yzdOMSJI4eBZwhphSnZ AGD4ncpFB ;
struct bDSUs8eYtHrlofg klDvONS06Xor875ey ;
};
int Buv9g2ARAuvw4niz 
;
int ;
int ;
int o ( int QrNRztWyRNmSyH , int WdCLkkcjVe7H59Cli 
  ) {
}
int ;
int ;
int ;
int ANe ( ) {
  xooE1H6vJYBHTj2 ;
  BAwXjaKPU6j ;
  while ( gPA_GaXVhpLzfZir8 )   if ( VHRSP )   scJMS 
    ;
else {
    VqD7ABH9oiEgnZ8J ;
    scs ;
    iYI1xhZZX ;
    x6zvJx8u81m6 ;
    if ( ycRjbThQL0wfUn8QTh )     bIp6xXvry54VfF ;
else     if ( gMF2nIi1PKJBEjvPx4x )     v ;


{
      if ( pTBrulQAgb6bYJAM )       XYD5LjDpMQ_HTlh 
        ;
else       xDek8hqkY ;

    }    _U1ANtgRN ;
  }

  if ( eihvWebuEA6fU )   return zvbJEF1FmDFV ;

}
